<resources>
    <string name="app_name">ElevenUser</string>
    <string name="title_text">Welcome back to \n Good Food</string>
    <string name="email">Your Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="remenber">Remeber</string>
    <string name="sign_in">S I G N  I N</string>
    <string name="or">OR</string>
    <string name="title_text_register">Let\'s start making \n good meals</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">S I G N  U P</string>
    <string name="forgot_password"> Y O U R  P A S S W O R D</string>
    <string name="forgot_your">F O R G O T</string>
    <string name="forgot_desc1">Enter Your Email below to recive</string>
    <string name="forgot_desc2">the instructions to reset your</string>
    <string name="forgot_desc3">password.</string>
    <string name="your_email">Your Email Address</string>
    <string name="send_password">S E N D   P A S S W O R D</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="breakfast_desc"><![CDATA[A wide variety of breakfast dishes that will \nkeep you going all day & make you have it \nagain for the next bright morning.]]></string>
    <string name="confirm_password">Confirm Passwrod</string>
    <string name="restro_cafe">Eleven Eleven</string>
    <string name="offer">OFFER</string>
    <string name="rest_name">Santushti Smoothies and Shakes</string>
    <string name="find_restaurants">Top 47 Restaurants</string>
    <string name="near_by">near by</string>
    <string name="filter">Filter</string>
    <string name="food_type">North Indian</string>
    <string name="city_name">Ahmedabad</string>
    <string name="value_of_star">4.6</string>
    <string name="delivry_time">Deliver in 20 min.</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pick up</string>
    <string name="rest_address">S.G Highway sindhubhavn</string>
    <string name="rest_contactno">9876543210</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="non_vegetarian">Non - Vegetarian</string>
    <string name="less_price">Under 99</string>
    <string name="price">220</string>
    <string name="add">+ ADD</string>
    <string name="Rs">\u20B9</string>
    <string name="Rs100">\u20B9 00.00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
