<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.ForgotPasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_67sdp"
        android:src="@drawable/locked"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_gravity="center"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/forgot_your"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/forgot_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_desc1"
        android:layout_gravity="center"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_desc2"
        android:layout_gravity="center"
        android:textSize="@dimen/_12ssp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_desc3"
        android:layout_gravity="center"
        android:textSize="@dimen/_12ssp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:background="@drawable/btn_grey"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"/>
    <Button
        android:id="@+id/btnSendPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_password"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

        <ImageView
            android:id="@+id/imgBackArrow"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backarrow"
            android:padding="@dimen/_5sdp"
            />

    </RelativeLayout>





</LinearLayout>