<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    android:background="@color/white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/pizza_img"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_name"
        android:layout_marginTop="@dimen/_6sdp"
        android:textColor="@color/grey_20"
        android:textSize="@dimen/_12ssp"
        android:layout_marginLeft="@dimen/_10sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_type"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:layout_weight="0.3"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/colorStar"
            android:layout_marginTop="@dimen/_10sdp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6 "
            android:textColor="@color/red_A100"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:text="@string/add"
            android:padding="@dimen/_6sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/border"/>

    </LinearLayout>

</LinearLayout>