<?xml version="1.0" encoding="utf-8"?>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/imgfour"
                android:layout_weight="0.7"
                android:scaleType="fitXY"
                android:padding="@dimen/_10sdp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp">
                <TextView
                    android:id="@+id/tvResturentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvFoodType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_type"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/grey_20"/>
                <TextView
                    android:id="@+id/tvCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_name"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@color/grey_20"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey_20"
                    android:layout_marginTop="@dimen/_10sdp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_6sdp">

                    <TextView

                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_of_star"
                        android:drawableLeft="@drawable/ic_star"
                        android:drawablePadding="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_2sdp"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colorStar"
                        android:drawableTint="@color/colorStar"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tvRating"
                        android:text="@string/delivry_time"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_55sdp"
                        android:textSize="@dimen/_12ssp"/>
                </RelativeLayout>



            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


