<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.signUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/food"
                    android:scaleType="fitXY"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1.5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_register"
                    android:textSize="@dimen/_25ssp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:padding="@dimen/_15sdp"/>

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:hint="@string/first_name"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:hint="@string/last_name"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:hint="@string/email"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:hint="@string/password"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:background="@drawable/btn_round"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_14ssp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_15sdp">
                    <View
                        android:id="@+id/view1"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="0.5dp"
                        android:background="@color/black"
                        android:layout_marginTop="@dimen/_8sdp"
                        />
                    <TextView
                        android:id="@+id/tvOr"
                        android:layout_toRightOf="@id/view1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/_5sdp"/>
                    <View
                        android:id="@+id/view2"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="0.5dp"
                        android:background="@color/black"
                        android:layout_toRightOf="@id/tvOr"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_5sdp" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp">

                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_facebook"
                        android:src="@drawable/ic_facebook"
                        android:padding="@dimen/_12sdp"
                        android:tint="@color/white"/>
                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_twiter"
                        android:src="@drawable/ic_twitter"
                        android:padding="@dimen/_12sdp"
                        android:tint="@color/white"/>
                    <ImageView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_google"
                        android:src="@drawable/ic_google"
                        android:tint="@color/white"
                        android:padding="@dimen/_12sdp"
                        />
                </LinearLayout>
            </LinearLayout>




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
        <ImageView
            android:id="@+id/imgBackArrow"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backarrow"
            android:padding="@dimen/_5sdp"
            />
    </RelativeLayout>


</LinearLayout>